First package commit

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ecospace
 Type: Package
-Title: Simulating Community Assembly and Ecological Diversification Within Ecospace Frameworks
+Title: Simulating Community Assembly and Ecological Diversification Using Ecospace Frameworks
 Version: 1.0.0
 Date: 2015-10-21
 Depends: R (>= 3.1.0)
