Updated package help file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,7 @@ export(rbind_listdf)
 export(redundancy)
 export(sample2)
 export(unique2)
+import(FD)
+importFrom(stats,rmultinom)
+importFrom(stats,runif)
+importFrom(stats,var)
