cleaning up files

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ Submitting to CRAN.txt
 ecospace.Rproj
 revdep
 cran-comments.md
+Novack-Gottshall_EcomodelsII.pdf
+Novack-Gottshall_EcomodelsI.pdf
+Submitting to CRAN.docx
