--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: ecospace
 Type: Package
 Title: Simulating Community Assembly and Ecological Diversification Using
     Ecospace Frameworks
-Version: 1.1.2
+Version: 1.1.3
 Date: 2016-01-08
 Depends:
     R (>= 3.3.2)
@@ -22,3 +22,7 @@ URL: https://github.com/pnovack-gottshall/ecospace,
 LazyData: TRUE
 BugReports: https://github.com/pnovack-gottshall/ecospace/issues
 RoxygenNote: 5.0.1
+Suggests: knitr,
+    rmarkdown,
+    vegan
+VignetteBuilder: knitr
