--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,13 @@ Package: ecospace
 Type: Package
 Title: Simulating Community Assembly and Ecological Diversification Using
     Ecospace Frameworks
-Version: 1.4.1
-Date: 2018-03-11
+Version: 1.4.2
+Date: 2020-06-12
 Depends:
-    R (>= 3.4.0)
+    R (>= 4.0.0)
 Imports:
     FD (>= 1.0-12)
+Suggests: vegan, knitr, rmarkdown, data.table
 Authors@R: person("Phil", "Novack-Gottshall", email = "pnovack-gottshall@ben.edu",
      role = c("aut", "cre"))
 Maintainer: Phil Novack-Gottshall <pnovack-gottshall@ben.edu>
@@ -21,8 +22,6 @@ URL: https://github.com/pnovack-gottshall/ecospace,
     http://www.ben.edu/faculty/pnovack-gottshall/index.html
 LazyData: TRUE
 BugReports: https://github.com/pnovack-gottshall/ecospace/issues
-RoxygenNote: 6.0.1
-Suggests: knitr,
-    rmarkdown,
-    vegan
+RoxygenNote: 7.1.0
+Encoding: UTF-8
 VignetteBuilder: knitr
